--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,17 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 * {
-  font-size: calc(5px + 0.8vw);
   cursor: url("/personal-website/images/cursor.svg"), auto;
+}
+
+@media all and (max-width: 991px) {
+  * {
+    font-size: calc(5px + 1.75vw);
+  }
+}
+
+@media all and (min-width: 992px) {
+  * {
+    font-size: calc(5px + 0.7vw);
+  }
 }
