--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,11 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 * {
-  cursor: url("/personal-website/images/cursor.svg"), auto;
+  cursor: url("/personal-website/images/cursor.svg");
+}
+
+p {
+  text-align: justify;
 }
 
 @media all and (max-width: 991px) {
